fix footer alignment

--- a/docs/src/pages/index.module.scss
+++ b/docs/src/pages/index.module.scss
@@ -103,6 +103,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
+  padding: 0 60px;
 
   h2 {
     margin: 0;
@@ -384,9 +385,13 @@
         margin-left: 24px;
       }
 
-      img {
-        width: 16px;
-        height: 16px;
+      a {
+        display: flex;
+
+        img {
+          width: 16px;
+          height: 16px;
+        }
       }
     }
   }
